# sm-agentic-workshop

./: .gitignore  CLAUDE.md  Makefile  README.md  data.db  pyproject.toml
.claude/: settings.json
docs/plans/: 2026-02-03-dashboard-efficiency-metrics.md
scripts/: bootstrap.sh  verify-setup.sh
src/: database.py  main.py  models.py
src/routes/: charts.py  dashboard.py  filters.py  metrics.py
src/static/js/: charts.js
src/templates/: base.html  dashboard.html
src/templates/components/: bar_chart.html  campaign_filter.html  line_chart.html  metric_card.html  metrics_grid.html
tests/: conftest.py  test_charts.py  test_filters.py  test_metrics.py
